# undoCore

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build.yml  docs.yml  install-test.yml  release.yml  static-analysis.yml
cmake/: undoCoreConfig.cmake.in
include/undoCore/: conversions.hpp  ioBus.hpp  processImage.hpp  types.hpp  undoCore.hpp  undoCoreVer.hpp  undoMath.hpp
tests/test_processImage/: CMakeLists.txt  test_processImage.cpp
